--- a/estudiantes.html
+++ b/estudiantes.html
@@ -60,6 +60,23 @@
         </section>
     </main>
     <br>
+   
+    <main class="container">
+        <section class="row">
+          <hr>
+            <section class="col-8">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Esteban Ismael Cifuentes Salinas</h5>
+                      <h6 class="card-subtitle mb-2 text-muted">Estudiante</h6>
+                      <p class="card-text">Ayude en la evaluación :'3'.</p>
+                      <a href=# class="card-link">No hay más ...</a>
+                    </div>
+                  </div>
+            </section>
+        </section>
+    </main>
+    <br>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
           <span class="text-muted">&copy; 2022 por UTA-FISEI</span>
