--- a/estebancifuentes.html
+++ b/estebancifuentes.html
@@ -32,7 +32,8 @@
                         Web Pages
                       </a>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="estebancifuentes.html">Esteban Cifuentes</a></li>
+                        <li><a class="dropdown-item" href="estebancifuentes.html">Esteban Ismael Cifuentes Salinas</a></li>
+                        <li><a class="dropdown-item" href="santiagojara.html">Santiago Jara</a></li>
                       </ul>
                     </li>
                     </ul>
