--- a/estudiantes.html
+++ b/estudiantes.html
@@ -70,7 +70,7 @@
                       <h5 class="card-title">Esteban Ismael Cifuentes Salinas</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Estudiante</h6>
                       <p class="card-text">Ayude en la evaluación :'3'.</p>
-                      <a href=# class="card-link">No hay más ...</a>
+                      <a href="estebancifuentes.html" class="card-link">Ver mi perfil</a>
                     </div>
                   </div>
             </section>
